✅ test(collector): T7 SmokeMockitoBase 회귀 가드 + 설정 키
- SmokeMockitoBase: MACRO-EXT 신규 빈 5개 추가 (EcosCollectionService/FredCollectionService/MacroExternalScheduler/MacroIndicatorBackfillOrchestrator/MacroIndicatorBackfillScheduler), @SuppressWarnings(ExcessiveImports)
- application.yml: ecos/fred/macro.backfill 설정 키 추가 (ECOS_API_KEY/FRED_API_KEY 환경변수)
- PMD/SpotBugs 수정: List.copyOf() 방어적 복사(EI/EI2), AvoidCatchingGenericException @SuppressWarnings, 상수 추출(817Y002), getFirst(), 필드 선언 순서, 로그 레벨 가드, 숫자 구분자(99_999)

SPEC-COLLECTOR-MACRO-EXT-001 REQ-MACRO-EXT-001